# squarespace-commerce-python

./: README.md  pyproject.toml
squarespace_commerce/: Squarespace.py  __init__.py  app.py
tests/: test_squarespace_commerce.py
