[tool.poetry]
name = "squarespace_commerce"
version = "0.1.0"
description = ""
authors = ["Casey Dierking <casey@caseydierking.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
my-script = "squarespace_commerce.app:start"
